# flow

./: .env.example  .gitignore  .prettierignore  .vercelignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DX.md  HELP.md  README.md  TODO.md  changelog.md  components.json  drizzle.config.ts  eslint.config.js  index.html  lingui.config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  release.yml  rlm-ci.yml
.github/workflows-disabled/: ci.yml.disabled  rlm-ci.yml.disabled
api/auth/: [...all].ts
api/friday/: chat.ts
benches/: benchmark.rs
docs/: DEVELOPMENT.md  FLOW_STATUS.md  MODELS.md
drizzle/: 0000_mute_lizard.sql  0001_steep_iron_lad.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
extensions/flow-webext/: package.json
extensions/flow-webext/scripts/: dashboard-smoke.mjs
extensions/flow-webext/static/: flow.css
metasearch/: README.md
metasearch/.github/workflows/: ci.yml
metasearch/crates/metasearch-engine/: Cargo.toml
metasearch/docs/: PROVIDER_ACCESS_MODELS.md
models/wake_words/: .gitignore
scripts/: android-install.ps1  download-kokoro-tts.ps1  download-qwen3-tts.ps1  download_whisper.ps1  flow-voice-status.ps1  qwen3_tts_runner.py  setup-kokoro-tts-runtime.ps1  setup-qwen3-tts-runtime.ps1  tauri.mjs  test-friday-local-stream.ts
src/: App.css  App.tsx  Home.tsx  Onboarding.tsx  ToastOverlay.tsx  i18n.ts  lib.rs  pill.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  macos-permissions.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility_context.rs  analytics.rs  app_paths.rs  assistive.rs  audio.rs  cloud.rs  context_formatting.rs  crypto.rs  data_migration.rs  dictionary.rs  downloader.rs  flow_fetch.rs  friday_chat.rs  insights.rs  lib.rs  library.rs  llm_cleanup.rs  local_text_model.rs  local_transcription.rs  mode_context.rs  model_language_table.rs  model_manager.rs  music.rs  ocr.rs  permissions.rs  personalization.rs  pill.rs  recent_transcriptions.rs  recorder.rs  scratchpad.rs  settings.rs  snippets.rs  storage.rs  streaming_transcription.rs  toast.rs  transcribe.rs  transcription_api.rs  transforms.rs  tray.rs  tts.rs  (+5 more)
src-tauri/src/core/: hotkeys.rs  mod.rs  settings.rs  transcriptions.rs
src-tauri/src/personalization/: icons.rs
src-tauri/src/platform/: mod.rs  overlay.rs  settings_window.rs  toast.rs
src-tauri/src/platform/macos/: audio_devices.rs  icons.rs  menu.rs  mod.rs  toast.rs
src-tauri/src/platform/windows/: hotkeys.rs  icons.rs  menu.rs  mod.rs  overlay.rs  settings_window.rs  toast.rs
src/app/: App.css  App.tsx  FlowClientApp.tsx  WebPreview.tsx  layout.tsx  page.tsx  providers.tsx
src/app/fiday/: page.tsx
src/app/www/: page.tsx
src/browser/: extension_smoke.rs  mod.rs  pack_recovery.rs  pack_reuse.rs  webllm_acceleration.rs
src/cli/: args.rs  commands.rs
src/competitive/: mod.rs  progress.rs
src/components/: CleanupPanel.tsx  DictionaryView.tsx  Dropdown.tsx  FAQModal.tsx  LanguageModelPanel.tsx  LibraryView.tsx  PersonalizationView.tsx  TranscriptionItem.tsx  TranscriptionList.tsx
src/components/settings/: AccountView.tsx  DebugSection.tsx  SettingsModal.tsx  UpdateChecker.tsx  WhatsNewModal.tsx
src/config/: export.rs  release.rs
src/dx/: facade.rs
src/experience/: accessibility.rs  audit.rs  automation.rs  embedded.rs  health.rs  hostdictation.rs  hostkit.rs  mod.rs  persistence.rs  proofing.rs  session.rs  snooze.rs  stores.rs  supervisor.rs  types.rs  typing.rs
src/features/ai/: gateway-routing.ts  index.ts  local-chat-transport.ts  local-stream.ts  model-routing.ts  tauri-local-chat.ts  tool-definitions.ts
src/features/auth/: api.ts  queries.ts
src/features/dictionary/: api.ts  queries.ts
src/features/flow-fetch/: api.ts  queries.ts
src/features/friday/: pageData.ts
src/features/insights/: api.ts  queries.ts
src/features/onboarding/: OnboardingScreen.tsx  machine.ts  platform.ts
src/friday/: artifacts.rs  checks.rs  dashboard_export.rs  dashboard_host_bridge.rs  dashboard_host_runner.rs  dashboard_product_ui.rs  dashboard_release_checklist.rs  dashboard_runner_release.rs  execution_handoff.rs  live_ui.rs  mod.rs  multimodal.rs  readiness.rs  release_candidate_archive.rs  release_checkpoint_evidence_vault.rs  release_checkpoint_review.rs  release_checkpoint_signoff.rs  release_closure_ledger.rs  release_continuity_journal.rs  release_deployment_gate.rs  release_escalation_ledger.rs  release_evidence_attachment_review.rs  release_evidence_sla_monitor.rs  release_export_kit.rs  release_external_receipt_archive.rs  release_handoff_audit_trail.rs  release_handoff_completion_ledger.rs  release_handoff_dispatch_audit.rs  release_handoff_dispatch_checklist.rs  release_handoff_dispatch_governance.rs  release_handoff_governance_review.rs  release_handoff_packet.rs  release_incident_archive.rs  release_learning_register.rs  release_outbound_review.rs  release_owner_followup_board.rs  release_post_promotion_monitor.rs  release_prevention_planner.rs  release_promotion_ledger.rs  release_publication_control.rs  (+11 more)
src/hooks/: useAuth.ts  useCloudTranscription.ts  useLibraryItems.ts  useTranscriptions.ts
src/lib/: auth.ts  index.ts  llmProviders.ts  modelCapabilities.ts  shortcuts.ts  transcriptionLanguages.ts  transcriptions.ts
src/liquidglass/: imported-routes.css
src/models/: llm.rs  mod.rs  ocr.rs  stt.rs  tts.rs
src/platform/: service.ts
src/runtime/: catalog.rs  local.rs
src/search/: metasearch_api.rs  mod.rs  plan.rs
src/types/: app.ts  audio.ts  flowFetch.ts  howler.d.ts  index.ts  insights.ts  library.ts  models.ts  pill.ts  scratchpad.ts  settings.ts  snippets.ts  toast.ts  transcription.ts  transforms.ts
tests/: integration_test.rs
tools/flow-dictation-host/: Cargo.toml  README.md
tools/flow-tts-host/: Cargo.toml  README.md
(+369 files in other folders)
